Reconcile improvements, Optional PVC deletion, envvar configuration, and Status Conditions
Make common create/delete functions for the API objects, to simplify the
Reconcile logic, and better separate functionality. Improves the
readability of the Reconcile logic.

Each Wordpress instance now takes an optional `retainVolumes = true`
setting. If set to **true**, the PVCs created by the Operator for the
deployment instance will not be deleted when the rest of the instance is
removed. By default, the PVCs will be deleted.

Allow environment variables in the operator deployment to configure the
images to use, PVC sizing, secret key naming.

Add and expose some 'Status' from the API for the Wordpress instance.
The Status Conditions expose the state of the API objects, and whether
the operator has created them. This is an example usage of Status and
Conditions that could be expanded to monitor individual object states.

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -15,8 +15,7 @@ spec:
       serviceAccountName: wordpress-operator
       containers:
         - name: wordpress-operator
-          # Replace this with the built image name
-          image: quay.io/srust/wordpress-operator:0.0.1
+          image: quay.io/srust/wordpress-operator:better
           command:
           - wordpress-operator
           imagePullPolicy: Always
@@ -31,3 +30,13 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "wordpress-operator"
+            - name: WORDPRESS_SECRET_NAME
+              value: "mysql-pass"
+            - name: WORDPRESS_SECRET_KEY
+              value: "password"
+            - name: WORDPRESS_PVC_SIZE
+              value: "20Gi"
+            - name: WORDPRESS_IMAGE_MYSQL
+              value: "mysql:5.6"
+            - name: WORDPRESS_IMAGE_WORDPRESS
+              value: "wordpress:4.8-apache"
